Clean up home page, remove About nav, fix heading alignment

--- a/_sass/_main.scss
+++ b/_sass/_main.scss
@@ -200,3 +200,7 @@ section {
 figcaption {
     font-size: smaller;
 }
+
+section h2:first-child {
+        margin-top: 0;
+}
